改变一些配置。(＾Ｕ＾)ノ~Ｙ工头喊搬砖，等会在搞

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Hexo
 subtitle: ''
 description: 个人博客
 keywords: null
-author: John Doe
+author: 王鹤垚
 language: zh-CN
 timezone: 'Asia/Shanghai'
 url: http://example.com
