--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -114,7 +114,7 @@ navbar:
     links:
         Download on GitHub:
             icon: fab fa-github
-            url: 'https://github.com/ppoffice/hexo-theme-icarus'
+            url: 'https://github.com/qing-m'
 # Page footer configurations
 footer:
     # Links to be shown on the right of the footer section
@@ -223,11 +223,11 @@ widgets:
         position: left
         type: profile
         # Author name
-        author: Your name
+        author: 王鹤垚
         # Author title
-        author_title: Your title
+        author_title: 人生得意须尽欢，莫使金樽空对月
         # Author's current location
-        location: Your location
+        location: 东海
         # URL or path to the avatar image
         avatar: 
         # Whether show the rounded avatar image
@@ -235,24 +235,12 @@ widgets:
         # Email address for the Gravatar
         gravatar: 
         # URL or path for the follow button
-        follow_link: 'https://github.com/ppoffice'
+        follow_link: 'https://github.com/qing-m'
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
                 icon: fab fa-github
-                url: 'https://github.com/ppoffice'
-            Facebook:
-                icon: fab fa-facebook
-                url: 'https://facebook.com'
-            Twitter:
-                icon: fab fa-twitter
-                url: 'https://twitter.com'
-            Dribbble:
-                icon: fab fa-dribbble
-                url: 'https://dribbble.com'
-            RSS:
-                icon: fas fa-rss
-                url: /
+                url: 'https://github.com/qing-m'
     # Table of contents widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
